scrollbar and downarrow fixed

--- a/website/static/homepage.css
+++ b/website/static/homepage.css
@@ -1,21 +1,48 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+body {
+    overflow-x: hidden;
+}
 #particles-js {
+    
     opacity: 0;
     transform: translateY(50px);
     animation: fadeInSlideUp 2s forwards;
     animation-delay: 1s; /* Delay before the animation starts */
     width: 100vw;
     height: 100vh;
+    
+    
+}
+.homepageMain {
+    
+    width: 100vw;
+    height: 100vh;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    overflow-x: hidden;
-}
-.homepageMain {
     text-align: center;
     position: absolute;
     z-index:-1;
+    
 }
+.copyright {
+    color:lightblue;
+}
+.down-arrow {
+    position: absolute;
+    z-index:1;
+    bottom: 5px;
+    left: 50%;
+    transform: translateX(-50%);
+    
+}
+
+
 
 @keyframes fadeInSlideUp {
     to {
